첨부 파일 있을 경우 포스트 상세 페이지에 다운로드 버튼 출력하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,6 +9,7 @@
         <title>{{ post.title}} - Blog</title>
         <!-- Favicon-->
         <link rel="stylesheet" href="{% static 'blog/css/blog-post.css' %}" media="screen" />
+        <script src="https://kit.fontawesome.com/10bfa0cb87.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" />
     </head>
@@ -33,31 +34,44 @@
             <div class="row">
                 <div class="col-lg-8">
                     <!-- Post content-->
-                    <article>
-                        <!-- Post header-->
-                        <header class="mb-4">
-                            <!-- Post title-->
-                            <h1 class="fw-bolder mb-1">{{ post.title}}</h1>
-                            <p a class="lead">
-                                by
-                                <a href="#">작성자면 쓸 위치(개발예정)</a>
-                            </p>
-                            <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
+                    <!-- Post header-->
+                    <header class="mb-4">
+                        <!-- Post title-->
+                        <h1 class="fw-bolder mb-1">{{ post.title}}</h1>
+                        <p a class="lead">
+                            by
+                            <a href="#">작성자면 쓸 위치(개발예정)</a>
+                        </p>
+                        <!-- Post meta content-->
+                        <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
 
-                        </header>
-                        <!-- Preview image figure-->
-                        {% if post.head_image %}
-                       <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }} head_image">
-                        {% else %}
+                    </header>
+                    <!-- Preview image figure-->
+                    {% if post.head_image %}
+                        <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }} head_image">
+                    {% else %}
                         <image class="image-fluid rounded" src="https:picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
-                        {% endif %}
-                        <!-- Post content-->
-                        <section class="mb-5">
-                            <p class="fs-5 mb-4">{{ post.content }}</p>
+                    {% endif %}
+                    <!-- Post content-->
+                    <section class="mb-5">
+                        <p class="fs-5 mb-4">{{ post.content }}</p>
 
-                        </section>
-                    </article>
+                        {% if post.file_upload %}
+                            <a href="{{ post.file_upload.url }}" class="btn btn-outline-dark" role="button"download>Download:
+                                {% if post.get_file_ext == 'csv' %}
+                                    <i class="fa-solid fa-file-csv"></i>"
+                                {% elif post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                                    <i class="fa-solid fa-file-excel"></i>
+                                {% elif post.get_file_ext == 'docx' or post.get_file_ext == 'doc'%}
+                                    <i class="fa-light fa-file-word"></i>
+                                {% else %}
+                                    <i class="far fa-file"></i>
+                                    {% endif %}
+                                {{ post.get_file_name }}
+                            </a>
+                        {% endif %}
+
+                    </section>
                     <!-- Comments section-->
                     <section class="mb-5">
                         <div class="card bg-light">
