포스트 목록에 포스트가 하나도 없을 경우 테스트하기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -25,7 +25,7 @@
                       <a class="nav-link" href="./blog_list.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./about_me.html">About me</a>
+                      <a class="nav-link" href="./about_me">About me</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -79,8 +79,10 @@
                   </div>
                 <div class="container my-3">
                     <div class="row">
-                        <div class="col-md-8 col-lg-9">
+                        <div class="col-md-8 col-lg-9" id="main-area">
                             <h1>Blog</h1>
+                        {% if post_list.exists %}
+
                                 {% for p in post_list %}
                                <!-- Blog post-->
                                <div class="card mb-4">
@@ -92,7 +94,10 @@
                                 <div class="card-body">
                                     <div class="small text-muted">January 1, 2022</div>
                                     <h2 class="card-title h4">{{ p.title }}</h2>
-                                    <p class="card-text">{{ p.content }}</p>
+                                    {% if p.hook_text %}
+                                        <h5 class="text-muted"> {{ p.hook_text }}</h5>
+                                    {% endif %}
+                                    <p class="card-text">{{ p.content | truncatewords:45}} </p>
                                     <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
                                 </div>
                                <div class="card-footer text-muted">
@@ -101,6 +106,9 @@
                                 </div>
                             </div>
                             {% endfor %}
+                        {% else %}
+                        <h3>아직 게시물이 없습니다.</h3>
+                        {% endif %}
                         <!-- pageing-->
                             <ul class="pagination justify-content-center mb-4">
                               <li class = "page-item">
