--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="ko">
+<html>
         <head>
                 <title>{% block head_title %}Blog{% endblock %}</title>
-            <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css'%}" media="screen">
-            <script src="https://kit.fontawesome.com/10bfa0cb87.js" crossorigin="anonymous"></script>
+                <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
+                <script src="https://kit.fontawesome.com/10bfa0cb87.js" crossorigin="anonymous"></script>
 
         </head>
 
 
         <body>
            {% include 'blog/navbar.html' %}
+                <div class="container my-3">
+                    <div class="row">
+                        <div class="col-md-8 col-lg-9" id="main-area">
+                           {% block main_area %}
+                            {% endblock %}
+                            </div>
+
+                            <div class="col-md-4 col-lg-3">
+
                           <!-- Search widget-->
                     <div class="card mb-4">
                       <div class="card-header">Search</div>
@@ -46,7 +55,7 @@
                             </div>
                          </div>
                      </div>
-                     {% include 'blog/footer.html' %}
+                {% include 'blog/footer.html' %}
      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
