--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,6 +1,3 @@
-
-
-
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
                 <a class="navbar-brand"  href="/">Django</a>
@@ -16,7 +13,7 @@
                       <a class="nav-link" href="/blog/">Blog</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/about_me/">About me</a>
+                      <a class="nav-link" href="/about_me/">About Me</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -68,11 +65,3 @@
                       </div>
                     </div>
                   </div>
-                <div class="container my-3">
-                    <div class="row">
-                        <div class="col-md-8 col-lg-9" id="main-area">
-                            {% block main_area %}
-                            {% endblock %}
-
-                            </div>
-                            <div class="col-md-4 col-lg-3">
