--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,36 +1,31 @@
-            {% extends 'blog/base.html' %}
-            {% block main_area %}
+{% extends 'blog/base.html' %}
 
-                    <h1>Blog</h1>
-                        {% if post_list.exists %}
-
+{% block main_area %}
+ <h1>Blog</h1>
+                            {% if post_list.exists %}
                                 {% for p in post_list %}
-                               <!-- Blog post-->
-                               <div class="card mb-4">
-                               {% if p.head_image %}
-                                   <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image">
-                                   {% else %}
-                                   <img class="card-img-top" src="https:picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
-                                   {% endif %}
+                                <!-- Blog post-->
+                            <div class="card mb-4">
+                            {% if p.head_image %}
+                              <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt ="{{ p }} head image">
+                                {% else %}
+                                    <img class="card-img-top" src="http://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
+                                {% endif %}
                                 <div class="card-body">
-                                    <div class="small text-muted">January 1, 2022</div>
+                                    <div class="small text-muted">{{ p.created_at}}</div>
+                                    <a href="#">작성자명 쓸 위치(개발예정)</a>
                                     <h2 class="card-title h4">{{ p.title }}</h2>
                                     {% if p.hook_text %}
-                                        <h5 class="text-muted"> {{ p.hook_text }}</h5>
+                                    <h5 class="text-muted">{{ p.hook_text }}</h5>
                                     {% endif %}
-                                    <p class="card-text">{{ p.content | truncatewords:45}} </p>
+                                    <p class="card-text">{{ p.content | truncatewords:45 }}</p>
                                     <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
                                 </div>
-                               <div class="card-footer text-muted">
-                                   Posted on {{ p.created_at }} by
-                                   <a href="#">작성자명 쓸 위치(개발 예정)</a>
-                                </div>
                             </div>
-                            {% endfor %}
+                                        {%  endfor %}
                         {% else %}
                         <h3>아직 게시물이 없습니다.</h3>
-                        {% endif %}
-                        <!-- pageing-->
+                        {% endif  %}
                             <ul class="pagination justify-content-center mb-4">
                               <li class = "page-item">
                                 <a class="page-link" href="#">&larr; Older</a>
@@ -39,4 +34,4 @@
                                 <a class="page-link" href="#">Newer &rarr;</a>
                               </li>
                               </ul>
-                        {% endblock %}
+{% endblock %}
