--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,7 +14,7 @@
                               <!-- Post categories-->
                             <p class="lead">
                                 by
-                                <a href="#">작성자명 쓸 위치(개발 예정)</a>
+                                <a href="#">{{ p.author|upper }}</a>
                             </p>
                             <!-- Post meta content-->
                             <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
