--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,16 +5,23 @@
                             {% if post_list.exists %}
                                 {% for p in post_list %}
                                 <!-- Blog post-->
-                            <div class="card mb-4">
+                            <div class="card mb-4" id="post-{{ p.pk }}">
                             {% if p.head_image %}
                               <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt ="{{ p }} head image">
                                 {% else %}
                                     <img class="card-img-top" src="http://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
                                 {% endif %}
                                 <div class="card-body">
-                                    <div class="small text-muted">{{ p.created_at}}</div>
-                                    <a href="#">작성자명 쓸 위치(개발예정)</a>
+                                {% if p.category %}
+                                <span class="badge badge-secondary float-right">{{ p.category }}</span>
+                                {% else %}
+                                <span class="badge badge-secondary float-right">미분류</span>
+                                {% endif %}
+                                    <div class="card-footer text-muted">{{ p.created_at}}
+                                    <a href="#">{{ p.author | upper }}</a>
+
                                     <h2 class="card-title h4">{{ p.title }}</h2>
+                                    </div>
                                     {% if p.hook_text %}
                                     <h5 class="text-muted">{{ p.hook_text }}</h5>
                                     {% endif %}
@@ -22,7 +29,7 @@
                                     <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
                                 </div>
                             </div>
-                                        {%  endfor %}
+{%  endfor %}
                         {% else %}
                         <h3>아직 게시물이 없습니다.</h3>
                         {% endif  %}
