로그인한 사용자에게만 포스트 작성 페이지 열어주기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -19,7 +19,7 @@
                               <!-- Post categories-->
                             <p class="lead">
                                 by
-                                <a href="#">{{ p.author|upper }}</a>
+                                <a href="#">{{ post.author | upper }}</a>
                             </p>
                             <!-- Post meta content-->
                             <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
