--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}
     {{ post.title }} -Blog
@@ -64,18 +65,34 @@
                     </article>
                     <!-- Comments section-->
     <div id="comment-area">
-                    <section class="mb-5">
+                    <section class="my-4">
+                       <h5 class="card-header">Leave a Comment:</h5>
                         <div class="card bg-light">
                             <div class="card-body">
+                            {% if user.is_authenticated %}
                                 <!-- Comment form-->
-                                <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
+                                <form id="comment-form" method="POST" action="{{ post.get_absolute_url }}new_comment/">
+
+                                        {% csrf_token %}
+                                <div class="form-group">
+
+                                     {{ comment_form | crispy }}
+
+                                </div>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                                </form>
+                            {% else %}
+                  <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
+                            {% endif %}
                                 <!-- Comment with nested comments-->
                                 <div class="d-flex mb-4">
+
                                     <!-- Parent comment-->
                                     <div class="ms-3">
                                         <!-- Child comment 1-->
                                         <div class="d-flex mt-4">
                                             <div class="ms-3">
+
                                             </div>
                                         </div>
                                         {% if post.comment_set.exists %}
@@ -84,9 +101,9 @@
                                 <div class="media mb-4" id="comment-{{ comment.pk }}">
                                    <img class="d-flex mr-3 rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="">
                                     <div class="media-body">
-                                        <h5 class="mt-0">{{ comment.author.username }} &nbsp;&nbsp;<small class="text-muted">{{ comment.create_at }}</small>
+                                        <h5 class="mt-0">{{ comment.author.username }} &nbsp;&nbsp;<small class="text-muted">{{ comment.created_at }}</small>
                                         </h5>
-                                        <p> {{ comment.content | linebreaks }}</p>
+                                        <p>{{ comment.content | linebreaks }}</p>
                                     </div>
                                 </div>
                                     {% endfor %}
