--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,9 @@
             <a class="btn btn-info btn-sm float-right" href="/blog/create_post/" role="button"><i class="fas fa-pen"></i>&nbsp;&nbsp;New Post</a>
             {% endif %}
     {% endif %}
- <h1>Blog {% if category %}<span class="badge badge-secondary">{{ category }}</span>{% endif %}
+ <h1>Blog
+    {% if search_info %}<small class="text-muted">{{ search_info }}</small>{% endif %}
+    {% if category %}<span class="badge badge-secondary">{{ category }}</span>{% endif %}
     {% if tag %}<span clas="badge badge-secondary">{{ tag }}</span>{% endif %}
     </h1>
                             {% if post_list.exists %}
