--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -23,8 +23,15 @@
                       {% if user.is_authenticated %}
                           <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              {{ user.username }}
+                              {% if user.socialaccount_ste.all.0.get_avatar_url %}
+                                  <img class="rounded-circle" width="25px" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="">
+                                  {% else %}
+                                  <img class="rounded-circle" width="40px" src=https://doitdjango.com/avatar/id/1318/18e80ffb9376f8ec/svg/{{ user.email }}">
+                                       {% endif %}
+                          &nbsp;
+                          {{ user.username }}
                           </a>
+
                           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                               <a class="dropdown-item" href="/accounts/logout/">Log out</a>
                           </div>
