--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -1,18 +1,68 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>개발자 Jun 입니다.</title>
+    <title>About Jun 입니다.</title>
+    <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
+    <link rel="stylesheet" href="{% static 'single_pages/css/about_me.css' %}" media="screen">
+    <script src="https://kit.fontawesome.com/10bfa0cb87.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav>
-    <a href="/blog/">Blog</a>
-    <a href="/about_me/">About me</a>
-</nav>
+{% include 'blog/navbar.html' %}
 
-<h1>Hello I'm Jun</h1>
-<h2> 이력</h2>
-<h2> Protfolio </h2>
-<h3>아직 공사중 입니다.</h3>
+<section>
+   <div class="container mt-4">
+       <div class="row">
+           <div class="col-lg-8">
+               <h1>안녕하세요 김석준 입니다.</h1>
+
+               <br/>
+               <p class="lead">
+                   음악과 컴퓨터와 고양이를 좋아합니다.<br/>
+                   장고를 써보며 웹사이트의 개념을 익히며 운동과 책을 읽으며 자기계발을 합니다.
+               </p>
+               <ul>
+                   <li>WORK EXPERIENCE</li>
+                <ul>
+               <li> 학위 - 전주 비전대학교 졸업 (2022.03 ~)</li>
+               <li> 자격증 - 정보처리 산업기사 (2021-11 ~)</li>
+                </ul>
+                   <li>EDUCATION</li>
+               <ul>
+               <li>컴퓨터 학부, 컴퓨터 정보과(Computer), 전주비전대학교(2019.03~2022.03~)</li>
+           </ul>
+               <li>PUBLISH</li>
+               <ul>
+                   <li>Do IT DJANGO, 개발중 (2022)</li>
+               </ul>
+               </ul>
+           </div>
+           <div class="col-lg-4">
+               <img class="img-fluid" src="{% static 'single_pages/images/sky.jpg' %}">
+           </div>
+       </div>
+   </div>
+
+</section>
+
+<section class="bg-light margin-for-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1>PORTFOLIO</h1>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="fixed-bottom">
+{% include 'blog/footer.html' %}
+    </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 </html>
